Fixed spacing of ul
nav bar was getting messed up a bit but i fixed it

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,6 @@ li{
     padding-bottom: 20px;
     font-size: 15px;
 }
-ul{
+#myList{
     padding-top: 50px;
 }
